HLStats ChangeLog
==============

1.52 (TBA)
*) Changed: Constant INCLUDE_PATH removed.
*) Changed: hlstats.php file renamed to index.php
				scripturl option has been removed.
*) Changed: sorting pictures renamed

1.51 (2009-11-23)
*) New: HLStats can now be translated via ini files. The default language
		is set in the hlstats.conf.php file. Update the configuration !
		Help and some graphics are still missing
*) New: Visitors can now change the language of the web content via cookies
*) New: Player are now seperated into "active" and "inactive" Players
		The players which have now activity (skill change) in a given timeframe
		are set to inactive and will not be show in players overview.
*) New: Role pictures in player info page if available.
*) Updated: Display of the awards and more stuff (thx to freaker and someone)
*) Updated: Ignore BOT option ignores everything which has BOT as unique ID
*) Updated: Dod Role and map pictures.
*) Updated: TF2 Weapon pics
*) Changed: Period for event deletion in hlstats.pl increased.
*) Changed: import-tools.sh removed (can be found in the docs now)
*) Changed: HLstats is now HLStats
*) Chnaged: Moved functions from hlstats.pl to HLstats.plib
*) Changed: hlstats.conf is now hlstats.conf.ini and uses the ini format.
	http://search.cpan.org/~adamk/Config-Tiny/
	The perl module Config::Tiny is now required for running HLStats daemon
*) Changed: removed some options which where never user or are useless anymore
	-n, --nodebug, $g_nodebug
*) Changed: removed the option g_patch_loopback_ip and implemented it into
	hlstats.pl
*) Changed: removed the old db object and replaced it with basic mysql functions
	from php.
*) Changed: renamed the hlstats.conf.inc.php file to hlstats.conf.php
*) Fixed: Special chars problem in players overview page (thx to freaker)
*) Fixed: Missing check in doEvent_Chat function (thx to VladiBG)
*) Fixed: rcon messages. Missing quotes (thx to freaker)